--- a/lib/gui/css/main.css
+++ b/lib/gui/css/main.css
@@ -6327,7 +6327,7 @@ img[disabled] {
   color: #787c7f;
   margin: 0 0 8px 0;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: normal;
   height: 21px;
   width: 100%; }
 
@@ -9673,65 +9673,26 @@ readers do not read off random characters that represent icons */
   font-weight: 900; }
 
 @font-face {
-  font-family: "Nunito";
-  src: url("Nunito-Regular.eot");
-  src: url("./fonts/Nunito-Regular.eot?#iefix") format("embedded-opentype"), url("./fonts/Nunito-Regular.woff2") format("woff2"), url("./fonts/Nunito-Regular.woff") format("woff"), url("./fonts/Nunito-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: block; }
-
-@font-face {
-  font-family: "Nunito";
-  src: url("Nunito-Bold.eot");
-  src: url("./fonts/Nunito-Bold.eot?#iefix") format("embedded-opentype"), url("./fonts/Nunito-Bold.woff2") format("woff2"), url("./fonts/Nunito-Bold.woff") format("woff"), url("./fonts/Nunito-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-  font-display: block; }
-
-@font-face {
-  font-family: "Nunito";
-  src: url("Nunito-Light.eot");
-  src: url("./fonts/Nunito-Light.eot?#iefix") format("embedded-opentype"), url("./fonts/Nunito-Light.woff2") format("woff2"), url("./fonts/Nunito-Light.woff") format("woff"), url("./fonts/Nunito-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: normal;
-  font-display: block; }
-
-@font-face {
-  font-family: "CircularStd";
-  src: url("./fonts/CircularStd-Bold.eot");
-  src: url("./fonts/CircularStd-Bold.eot?#iefix") format("embedded-opentype"), url("./fonts/CircularStd-Bold.woff2") format("woff2"), url("./fonts/CircularStd-Bold.woff") format("woff"), url("./fonts/CircularStd-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal;
-  font-display: block; }
-
-@font-face {
-  font-family: "CircularStd";
-  src: url("./fonts/CircularStd-Book.eot");
-  src: url("./fonts/CircularStd-Book.eot?#iefix") format("embedded-opentype"), url("./fonts/CircularStd-Book.woff2") format("woff2"), url("./fonts/CircularStd-Book.woff") format("woff"), url("./fonts/CircularStd-Book.ttf") format("truetype");
+  font-family: "SourceSansPro";
+  src: url("./fonts/SourceSansPro-Regular.eot");
+  src: url("./fonts/SourceSansPro-Regular.eot?#iefix") format("embedded-opentype"), url("./fonts/SourceSansPro-Regular.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   font-display: block; }
 
 @font-face {
-  font-family: "CircularStd";
-  src: url("./fonts/CircularStd-Medium.eot");
-  src: url("./fonts/CircularStd-Medium.eot?#iefix") format("embedded-opentype"), url("./fonts/CircularStd-Medium.woff2") format("woff2"), url("./fonts/CircularStd-Medium.woff") format("woff"), url("./fonts/CircularStd-Medium.ttf") format("truetype");
-  font-weight: 400;
+  font-family: "SourceSansPro";
+  src: url("./fonts/SourceSansPro-SemiBold.eot");
+  src: url("./fonts/SourceSansPro-SemiBold.eot?#iefix") format("embedded-opentype"), url("./fonts/SourceSansPro-SemiBold.ttf") format("truetype");
+  font-weight: 600;
   font-style: normal;
   font-display: block; }
 
-.circular {
-  font-family: "CircularStd";
-  font-weight: 500; }
-
-.nunito {
-  font-family: "Nunito"; }
-
 body {
-  letter-spacing: 0.5px;
+  letter-spacing: 0.1px;
   display: flex;
   flex-direction: column;
-  font-family: "CircularStd"; }
+  font-family: "SourceSansPro"; }
   body > header {
     flex: 0 0 auto; }
   body > main {
